[tool.poetry]
name = "dotdotfiles"
version = "0.1.0"
description = "Tunaranch's dot files. Now with Ansible."
authors = ["Haikal Saadh <140396+tunaranch@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
anisble = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
